# TCC_Projeto

./: .gitignore  Dockerfile  README.md
api/: index.py
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: emendas.py  health.py  parlamentares.py  query.py
backend/app/models/: __init__.py  classificacao.py  emenda.py  execucao.py  parlamentar.py
backend/app/schemas/: __init__.py  emenda.py  health.py  parlamentar.py  query.py
backend/app/services/indexing/: embedding_generator.py  index_manager.py
backend/app/services/ingestion/: basedados_connector.py  camara_collector.py  cgu_collector.py  normalizer.py  siop_importer.py
backend/app/services/rag/: decomposer.py  dictionary.py  interpreter.py  pipeline.py  sql_validator.py  synthesizer.py
backend/app/services/search/: hybrid_search.py  sql_search.py  vector_search.py
backend/app/utils/: formatting.py  rate_limiter.py  source_urls.py
backend/data/: dictionary.json
backend/data/prompts/: interpretation.txt  synthesis.txt
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py
backend/scripts/: evaluate.py  generate_embeddings.py  ingest_all.py  load_acre_completo.py  load_local_data.py
backend/tests/: conftest.py
backend/tests/test_api/: test_health.py  test_query.py
backend/tests/test_ingestion/: test_normalizer.py
backend/tests/test_queries/: test_evaluation.py
backend/tests/test_rag/: test_decomposer.py  test_sql_validator.py
(+57 files in other folders)
